src/kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-deployment
  labels:
    app: api-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: gcr.io/ac-215-hw2/api-service:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app/data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: api-service-data-pvc
