src/kubernetes/vectorizer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vectorizer-deployment
  labels:
    app: vectorizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vectorizer
  template:
    metadata:
      labels:
        app: vectorizer
    spec:
      containers:
      - name: vectorizer
        image: gcr.io/ac-215-hw2/vectorizer:latest
        ports:
        - containerPort: 8080
